<resources>
    <string name="app_name">DevMo Corentin Leo</string>
    <string name="crewmate">Crewmate</string>
    <string name="password"></string>
    <string name="editText_login"></string>
    <string name="activity_event_list_name">List of Events</string>
    <string name="chat">Chat</string>
    <string name="my_profile">My profile</string>
    <string name="events">Events</string>
    <string name="event_picture">Event_picture</string>
    <string name="date_01_01_2000">01/01/2000</string>
    <string name="organizer_bob">Organizer: Bob</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ante_in_nibh_mauris_cursus_mattis_molestie_a_iaculis_aliquam_etiam_erat_velit_scelerisque_in_dictum_non_consectetur_a_egestas_egestas_fringilla_phasellus_faucibus_scelerisque_eleifend_donec_pretium_vulputate_vulputate_sapien_nec_sagittis_aliquam_malesuada_bibendum_fringilla_ut_morbi_tincidunt_augue_interdum_diam_ut_venenatis_tellus_in">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ante in nibh mauris cursus mattis molestie a iaculis. Aliquam etiam erat velit scelerisque in dictum non consectetur a. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Vulputate sapien nec sagittis aliquam malesuada bibendum. Fringilla ut morbi tincidunt augue interdum. Diam ut venenatis tellus in.</string>
    <string name="textview">TextView</string>
</resources>