<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crewmate"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editText_login"
        android:layout_below="@+id/title"/>

    <EditText
        android:id="@+id/editText_passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_login"
        android:password="true"
        android:text="@string/password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_passwd"
        android:onClick="checkLogin"
        android:text="Login" />

</androidx.constraintlayout.widget.ConstraintLayout>