<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ToggleButton
            android:id="@+id/button_event_chatScreen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="goToEvents_from_chat"
            android:text="@string/events"
            android:textAlignment="center"
            android:textOff="@string/events"
            android:textOn="@string/events" />

        <ToggleButton
            android:id="@+id/button_profile_chatScreen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:onClick="goToProfile_from_chat"
            android:text="@string/my_profile"
            android:textAlignment="center"
            android:textOff="@string/my_profile"
            android:textOn="@string/my_profile" />


        <ToggleButton
            android:id="@+id/button_chat_chatScreen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="stay_chat"
            android:text="@string/chat"
            android:textAlignment="center"
            android:textOff="@string/chat"
            android:textOn="@string/chat" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>